<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ped.bstu.by.educationui.Activities.AddTypeStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >

            <RadioButton
                android:id="@+id/rbListener"
                android:text="@string/student"
                style="@style/rbStyle" />

            <RadioButton
                android:id="@+id/rbStudent"
                android:text="@string/listener"
                style="@style/rbStyle" />

        </RadioGroup>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddTypeNext"
                style="@style/btnStyle"
                android:text="@string/next" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
