<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ped.bstu.by.educationui.Activities.AddBirthdayActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="3" >

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/currentDateTime"
            android:layout_gravity="center"
            style="@style/tvStyle" />

        <Button
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/btnAddBirthdayPickDate"
            android:layout_gravity="center"
            style="@style/btnStyle"
            android:text="@string/btnPickDate"/>

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            style="@style/tvStyle"
            android:text="@string/tvAddress"
            />

        <EditText
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/etAddAddress"
            style="@style/editTextStyle" />

        <LinearLayout
            android:layout_row="2"
            android:layout_column="0"
            style="@style/linearForButton" >

            <Button
                android:id="@+id/btnAddBirthdayNext"
                style="@style/btnStyle"
                android:text="@string/next" />

        </LinearLayout>

    </GridLayout>

</android.support.constraint.ConstraintLayout>
